Fixing z-index issue on header, resulting in menu hiding behind RO page contents

--- a/src/components/primary_header.module.scss
+++ b/src/components/primary_header.module.scss
@@ -8,7 +8,7 @@
     justify-content: space-between;
     background: linear-gradient(9deg, white, #e8e9ea);
     box-shadow: 0px 4px 3px #777;
-    z-index: 1;
+    z-index: 9999;
 
     .weather_info {
         display: flex;
